# BillWatcher

./: .dockerignore  .env  .gitattributes  .gitignore  LICENSE  README.md  README.txt  billbot.Dockerfile  billwatcher.Dockerfile  buildout.cfg  compose.yml  message-extraction.ini  pyproject.toml  setup.py
archive/: MANIFEST.in  buildout.cfg  setup.cfg  setup.py
archive/billwatcher/scripts/: bill_to_es.py
archive/billwatcher/static/css/: main.css
archive/billwatcher/templates/: home.html  template.html
archive/config/: cron.sample  production.ini_example
billwatcher/: __init__.py  views.py
billwatcher/scripts/: bill_download.py  bill_parse.py  db_backup.py  db_doc_downloader.py  db_flatten.py  pdf_parse.py
billwatcher/static/css/: main.css
billwatcher/static/js/: bill_details.js  main.js
billwatcher/templates/: about.html  home.html  search.html  template.html
billwatcher/templates/bill/: detail.html  list.html
cli/: app.py  document_to_markdown.py  download.py  download_archive_list.py  download_live_list.py  prompt.py  vectorise.py
config/: billwatcher.conf.sample  development.ini  production.ini
config/nginx/: billwatcher.sample
scraper_data/: cookie.txt
scraper_data/en/archive/1990/: list.json
scraper_data/en/archive/1991/: list.json  list.xml
scraper_data/en/archive/1992/: list.json
scraper_data/en/archive/1993/: list.json
scraper_data/en/archive/1994/: list.json
scraper_data/en/archive/1995/: list.json
scraper_data/en/archive/1996/: list.json
scraper_data/en/archive/1997/: list.json
scraper_data/en/archive/1998/: list.json
scraper_data/en/archive/1999/: list.xml
scraper_data/en/archive/2000/: list.json
scraper_data/en/archive/2001/: list.xml
scraper_data/en/archive/2002/: list.xml
scraper_data/en/archive/2004/: list.xml
scraper_data/en/archive/2005/: list.json
scraper_data/en/archive/2006/: list.xml
scraper_data/en/archive/2007/: list.json
scraper_data/en/archive/2008/: list.json
scraper_data/en/archive/2009/: list.json
scraper_data/en/archive/2010/: list.json
scraper_data/en/archive/2011/: list.json
scraper_data/en/archive/2012/: list.xml
scraper_data/en/archive/2013/: list.xml
scraper_data/en/archive/2014/: list.json
scraper_data/en/archive/2015/: list.json
scraper_data/en/archive/2016/: list.json
scraper_data/en/archive/2017/: list.json
scraper_data/en/archive/2018/: list.xml
scraper_data/en/archive/2019/: list.json
scraper_data/en/archive/2020/: list.xml
scraper_data/en/archive/2021/: list.xml
scraper_data/en/archive/2022/: list.json
scraper_data/en/live/: list.html
scraper_data/en/live/2023/: list.json
scraper_data/en/live/2024/: list.json
scraper_data/misc/halal/: metadata.json
scraper_data/ms/archive/: list.xml
scraper_data/ms/archive/1990/: list.xml
scraper_data/ms/archive/1991/: list.xml
scraper_data/ms/archive/1992/: list.json
scraper_data/ms/archive/1993/: list.json
scraper_data/ms/archive/1994/: list.json
scraper_data/ms/archive/1995/: list.xml
scraper_data/ms/archive/1996/: list.xml
scraper_data/ms/archive/1997/: list.json
scraper_data/ms/archive/1998/: list.json
scraper_data/ms/archive/1999/: list.json
scraper_data/ms/live/: list.html
scripts/: app.py  document_to_markdown.py  prompt.py  vectorise.py
src/billwatcher/: __main__.py  config.py  download.py  model.py  types.py  utils.py
src/sinar_billwatcher/: downloader.py  model.py  storage.py
src/sinar_billwatcher/cli/: download.py
(+4479 files in other folders)
