[project]
name = "billwatcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minio>=7.2.8",
    "starlette>=0.38.2",
    "uvicorn>=0.30.6",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.4",
    "sqlalchemy>=2.0.32",
    "httpx>=0.27.0",
    "psycopg2>=2.9.9",
    "faker>=28.0.0",
    "anyio[trio]>=4.4.0",
    "beautifulsoup4>=4.12.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["ruff>=0.6.1", "mypy>=1.11.2"]

[tool.setuptools.package-data]
"billwatcher" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
